apps/cortex-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cortex-dev
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
