apps/cortex-dev/code-generator-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: code-generator
  name: code-generator
  namespace: cortex-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: code-generator
  sessionAffinity: None
  type: ClusterIP
