apps/cortex-dev/issue-parser-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: issue-parser
  name: issue-parser
  namespace: cortex-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: issue-parser
  sessionAffinity: None
  type: ClusterIP
