apps/cortex-dev/redis-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: redis
  name: redis-service
  namespace: cortex-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
  sessionAffinity: None
  type: ClusterIP
