apps/cortex-dev/repo-context-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: repo-context
  name: repo-context
  namespace: cortex-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: repo-context
  sessionAffinity: None
  type: ClusterIP
